--- a/next-js-vanilla-extract/package.json
+++ b/next-js-vanilla-extract/package.json
@@ -3,17 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@capsizecss/vanilla-extract": "^2.0.0",
+    "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/css-utils": "^0.1.4",
+    "@vanilla-extract/sprinkles": "^1.6.3",
+    "classnames": "^2.5.1",
+    "lodash": "^4.17.21",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
