--- a/next-js-vanilla-extract/package.json
+++ b/next-js-vanilla-extract/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "next": "15.0.3",
+    "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwindcss": "^3.4.15"
